==> Samsung/TizenRT/os/arch/arm/src/tiva/tiva_irq.c <==
#include <tinyara/config.h>
#include <stdint.h>
#include <debug.h>
#include <tinyara/irq.h>
#include <tinyara/arch.h>
#include <tinyara/mm/heap_regioninfo.h>
#include <arch/irq.h>
#include "nvic.h"
#include "ram_vectors.h"
#include "up_arch.h"
#include "up_internal.h"
#include "chip.h"
#include "tiva_gpio.h"
#define DEFPRIORITY32 \
	(NVIC_SYSH_PRIORITY_DEFAULT << 24 |\
	 NVIC_SYSH_PRIORITY_DEFAULT << 16 |\
	 NVIC_SYSH_PRIORITY_DEFAULT << 8  |\
	 NVIC_SYSH_PRIORITY_DEFAULT)
#define NVIC_ENA_OFFSET    (0)
#define NVIC_CLRENA_OFFSET (NVIC_IRQ0_31_CLEAR - NVIC_IRQ0_31_ENABLE)

static int tiva_irqinfo(int irq, uintptr_t *regaddr, uint32_t *bit, uintptr_t offset)
{
	DEBUGASSERT(irq >= TIVA_IRQ_NMI && irq < NR_IRQS);

	/* Check for external interrupt */

	if (irq >= TIVA_IRQ_INTERRUPTS) {
		if (irq >= NR_IRQS) {
			return ERROR;		/* Invalid IRQ number */
		}

		if (irq < TIVA_IRQ_INTERRUPTS + 32) {
			*regaddr = (NVIC_IRQ0_31_ENABLE + offset);
			*bit = 1 << (irq - TIVA_IRQ_INTERRUPTS);
		} else if (irq < TIVA_IRQ_INTERRUPTS + 64) {
			*regaddr = (NVIC_IRQ32_63_ENABLE + offset);
			*bit = 1 << (irq - TIVA_IRQ_INTERRUPTS - 32);
		}
#if NR_VECTORS > 63
		else if (irq < TIVA_IRQ_INTERRUPTS + 96) {
			*regaddr = (NVIC_IRQ64_95_ENABLE + offset);
			*bit = 1 << (irq - TIVA_IRQ_INTERRUPTS - 64);
		}
#if NR_VECTORS > 95
		else if (irq < TIVA_IRQ_INTERRUPTS + 128) {
			*regaddr = (NVIC_IRQ96_127_ENABLE + offset);
			*bit = 1 << (irq - TIVA_IRQ_INTERRUPTS - 96);
		}
#if NR_VECTORS > 127
#warning Missing logic
#endif
#endif
#endif
		else {
			return ERROR;		/* Internal confusion */
		}
	}

	/* Handler processor exceptions.  Only a few can be disabled */

	else {
		*regaddr = NVIC_SYSHCON;
		if (irq == TIVA_IRQ_MEMFAULT) {
			*bit = NVIC_SYSHCON_MEMFAULTENA;
		} else if (irq == TIVA_IRQ_BUSFAULT) {
			*bit = NVIC_SYSHCON_BUSFAULTENA;
		} else if (irq == TIVA_IRQ_USAGEFAULT) {
			*bit = NVIC_SYSHCON_USGFAULTENA;
		} else if (irq == TIVA_IRQ_SYSTICK) {
			*regaddr = NVIC_SYSTICK_CTRL;
			*bit = NVIC_SYSTICK_CTRL_ENABLE;
		} else {
			return ERROR;		/* Invalid or unsupported exception */
		}
	}

	return OK;
}

void up_irqinitialize(void)
{
	uintptr_t regaddr;
	int nintlines;
	int i;

	/* The NVIC ICTR register (bits 0-4) holds the number of of interrupt
	 * lines that the NVIC supports, defined in groups of 32. That is,
	 * the total number of interrupt lines is up to (32*(INTLINESNUM+1)).
	 *
	 *  0 -> 32 interrupt lines, 1 enable register,   8 priority registers
	 *  1 -> 64 "       " "   ", 2 enable registers, 16 priority registers
	 *  2 -> 96 "       " "   ", 3 enable regsiters, 24 priority registers
	 *  ...
	 */

	nintlines = (getreg32(NVIC_ICTR) & NVIC_ICTR_INTLINESNUM_MASK) + 1;

	/* Disable all interrupts.  There are nintlines interrupt enable
	 * registers.
	 */

	for (i = nintlines, regaddr = NVIC_IRQ0_31_ENABLE; i > 0; i--, regaddr += 4) {
		putreg32(0, regaddr);
	}

	/* If CONFIG_ARCH_RAMVECTORS is defined, then we are using a RAM-based
	 * vector table that requires special initialization.
	 */

#ifdef CONFIG_ARCH_RAMVECTORS
	up_ramvec_initialize();
#endif

#ifdef CONFIG_ARCH_CHIP_CC3200
	putreg32((uint32_t)REGION_START, NVIC_VECTAB);
#endif

	/* Set all interrupts (and exceptions) to the default priority */

	putreg32(DEFPRIORITY32, NVIC_SYSH4_7_PRIORITY);
	putreg32(DEFPRIORITY32, NVIC_SYSH8_11_PRIORITY);
	putreg32(DEFPRIORITY32, NVIC_SYSH12_15_PRIORITY);

	/* Now set all of the interrupt lines to the default priority.  There are
	 * nintlines * 8 priority registers.
	 */

	for (i = (nintlines << 3), regaddr = NVIC_IRQ0_3_PRIORITY; i > 0; i--, regaddr += 4) {
		putreg32(DEFPRIORITY32, regaddr);
	}

	/* currents_regs is non-NULL only while processing an interrupt */

	current_regs = NULL;

	/* Initialize support for GPIO interrupts if included in this build */

#ifdef CONFIG_TIVA_GPIO_IRQS
#ifdef CONFIG_HAVE_WEAKFUNCTIONS
	if (tiva_gpioirqinitialize != NULL)
#endif
	{
		tiva_gpioirqinitialize();
	}
#endif

	/* Attach the SVCall and Hard Fault exception handlers.  The SVCall
	 * exception is used for performing context switches; The Hard Fault
	 * must also be caught because a SVCall may show up as a Hard Fault
	 * under certain conditions.
	 */

	irq_attach(TIVA_IRQ_SVCALL, up_svcall, NULL);
	irq_attach(TIVA_IRQ_HARDFAULT, up_hardfault, NULL);

	/* Set the priority of the SVCall interrupt */

#ifdef CONFIG_ARCH_IRQPRIO
	/* up_prioritize_irq(TIVA_IRQ_PENDSV, NVIC_SYSH_PRIORITY_MIN); */
#endif
#ifdef CONFIG_ARMV7M_USEBASEPRI
	tiva_prioritize_syscall(NVIC_SYSH_SVCALL_PRIORITY);
#endif

	/* If the MPU is enabled, then attach and enable the Memory Management
	 * Fault handler.
	 */

#ifdef CONFIG_ARMV7M_MPU
	irq_attach(TIVA_IRQ_MEMFAULT, up_memfault, NULL);
	up_enable_irq(TIVA_IRQ_MEMFAULT);
#endif

	/* Attach all other processor exceptions (except reset and sys tick) */

#ifdef CONFIG_DEBUG
	irq_attach(TIVA_IRQ_NMI, tiva_nmi, NULL);
#ifndef CONFIG_ARMV7M_MPU
	irq_attach(TIVA_IRQ_MEMFAULT, up_memfault, NULL);
#endif
	irq_attach(TIVA_IRQ_BUSFAULT, tiva_busfault, NULL);
	irq_attach(TIVA_IRQ_USAGEFAULT, tiva_usagefault, NULL);
	irq_attach(TIVA_IRQ_PENDSV, tiva_pendsv, NULL);
	irq_attach(TIVA_IRQ_DBGMONITOR, tiva_dbgmonitor, NULL);
	irq_attach(TIVA_IRQ_RESERVED, tiva_reserved, NULL);
#endif

	tiva_dumpnvic("initial", NR_IRQS);

#ifndef CONFIG_SUPPRESS_INTERRUPTS

	/* And finally, enable interrupts */

	irqenable();
#endif
}

void up_disable_irq(int irq)
{
	uintptr_t regaddr;
	uint32_t regval;
	uint32_t bit;

	if (tiva_irqinfo(irq, &regaddr, &bit, NVIC_CLRENA_OFFSET) == 0) {
		/* Modify the appropriate bit in the register to disable the interrupt.
		 * For normal interrupts, we need to set the bit in the associated
		 * Interrupt Clear Enable register.  For other exceptions, we need to
		 * clear the bit in the System Handler Control and State Register.
		 */

		if (irq >= TIVA_IRQ_INTERRUPTS) {
			putreg32(bit, regaddr);
		} else {
			regval = getreg32(regaddr);
			regval &= ~bit;
			putreg32(regval, regaddr);
		}
	}

	tiva_dumpnvic("disable", irq);
}

void up_enable_irq(int irq)
{
	uintptr_t regaddr;
	uint32_t regval;
	uint32_t bit;

	if (tiva_irqinfo(irq, &regaddr, &bit, NVIC_ENA_OFFSET) == 0) {
		/* Modify the appropriate bit in the register to enable the interrupt.
		 * For normal interrupts, we need to set the bit in the associated
		 * Interrupt Set Enable register.  For other exceptions, we need to
		 * set the bit in the System Handler Control and State Register.
		 */

		if (irq >= TIVA_IRQ_INTERRUPTS) {
			putreg32(bit, regaddr);
		} else {
			regval = getreg32(regaddr);
			regval |= bit;
			putreg32(regval, regaddr);
		}
	}

	tiva_dumpnvic("enable", irq);
}

int up_prioritize_irq(int irq, int priority)
{
	uint32_t regaddr;
	uint32_t regval;
	int shift;

	DEBUGASSERT(irq >= TIVA_IRQ_MEMFAULT && irq < NR_IRQS && (unsigned)priority <= NVIC_SYSH_PRIORITY_MIN);

	if (irq < TIVA_IRQ_INTERRUPTS) {
		/* NVIC_SYSH_PRIORITY() maps {0..15} to one of three priority
		 * registers (0-3 are invalid)
		 */

		regaddr = NVIC_SYSH_PRIORITY(irq);
		irq -= 4;
	} else {
		/* NVIC_IRQ_PRIORITY() maps {0..} to one of many priority registers */

		irq -= TIVA_IRQ_INTERRUPTS;
		regaddr = NVIC_IRQ_PRIORITY(irq);
	}

	regval = getreg32(regaddr);
	shift = ((irq & 3) << 3);
	regval &= ~(0xff << shift);
	regval |= (priority << shift);
	putreg32(regval, regaddr);

	tiva_dumpnvic("prioritize", irq);
	return OK;
}
